@@ -1,3 +1,7 @@
+2009-04-17  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* AspMvcProject.cs: Track namespace changes.
+
 2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.AspNet.Mvc.addin.xml: Bump MD version.
