@@ -1,3 +1,7 @@
+2009-04-17  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Makefile: Use local mdtool if it exists.
+
 2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* configure: Bump MD version.
